Implantados varios endpoints
