# src/main/java/com/ivanfrias/product_management/api/CategoryManagementController.java
@@ -1,11 +1,9 @@
 package com.ivanfrias.product_management.api;
 
 import com.ivanfrias.product_management.services.CategoryService;
-import com.ivanfrias.product_management.services.StoreService;
 import com.ivanfrias.products.api.CategoriesApi;
-import com.ivanfrias.products.api.ProductsApi;
 import com.ivanfrias.products.model.CategoryDTO;
-import com.ivanfrias.products.model.ProductDTO;
+import com.ivanfrias.products.model.CategoryRequestDTO;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
@@ -21,5 +19,10 @@ public class CategoryManagementController implements CategoriesApi {
     @Override
     public ResponseEntity<List<CategoryDTO>> getCategoriesByStoreId(Long storeId) {
         return ResponseEntity.ok(categoryService.getCategoryByStoreId(storeId));
+    }
+
+    @Override
+    public ResponseEntity<CategoryDTO> createCategory(Long storeId, CategoryRequestDTO categoryRequestDTO) {
+        return ResponseEntity.created(null).body(categoryService.createCategory(storeId, categoryRequestDTO));
     }
 }
