# src/main/java/com/ivanfrias/product_management/api/ProductManagementController.java
@@ -1,8 +1,9 @@
 package com.ivanfrias.product_management.api;
 
-import com.ivanfrias.product_management.services.StoreService;
+import com.ivanfrias.product_management.services.ProductService;
 import com.ivanfrias.products.api.ProductsApi;
 import com.ivanfrias.products.model.ProductDTO;
+import com.ivanfrias.products.model.ProductRequestDTO;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
@@ -12,11 +13,15 @@ import java.util.List;
 @RestController
 @RequiredArgsConstructor
 public class ProductManagementController implements ProductsApi {
-
-    private final StoreService storeService;
+    private final ProductService productService;
 
     @Override
     public ResponseEntity<List<ProductDTO>> getProductsByStoreId(Long storeId) {
-        return ResponseEntity.ok(storeService.getProductsByStoreId(storeId));
+        return ResponseEntity.ok(productService.getProductsByStoreId(storeId));
+    }
+
+    @Override
+    public ResponseEntity<ProductDTO> createProduct(Long storeId, ProductRequestDTO productRequestDTO) {
+        return ResponseEntity.created(null).body(productService.createProduct(storeId, productRequestDTO));
     }
 }
